# react-project-tracker-sql

./: .gitignore  README.md  package-lock.json  package.json  temp-working-tree-changes.txt  vite.config.js
backend/: .env.example  .gitignore  pyproject.toml
backend/project_tracker_api/: admin_service.py  api_dependencies.py  config.py  crud.py  database.py  log_service.py  logging_config.py  main.py  models.py  ms_project_import.py  persistence.py  schemas.py  seed.py  versioning.py
backend/project_tracker_api/routes/: admin.py  directory.py  projects.py  settings.py  system.py  tasks.py
backend/scripts/: export_foundry_csv.py
backend/tests/: conftest.py  test_api.py
docs/: database-schema.md  foundry-export-prep.md  foundry-ontology-mapping.md  ontology-merge-log.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/e2e/: home.spec.ts  project-create.spec.ts  settings.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/providers/: AppProviders.tsx
samples/ms-project/: advanced-infrastructure-program.xml  advanced-product-launch.xml  client-portal-rollout.xml  erp-modernization.xml  malformed_microsoft_project.xml  simple-website-refresh.xml
scripts/: generate-frontend-version.cjs  write-working-tree-changes.ps1
src/: App_old.js  main.jsx
src/components/: About_old.js  Create copy.jsx  Create.jsx  Create_axios.jsx  Create_old.js  Delete.jsx  Edit copy.jsx  Edit.jsx  Edit_axios.jsx  Home.jsx  Home_axios.jsx  NavBar.jsx  fetchclient.js
src/components/forms/: MyMultiSelectField.jsx
(+62 files in other folders)
