[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-tracker-api"
version = "0.1.0"
description = "FastAPI backend for the project tracker dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project_tracker_api*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]
